Added package test in POM