@@ -280,6 +280,97 @@
                             </execution>
                         </executions>
                     </plugin>
+                   </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>package-test</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-enforcer-plugin</artifactId>
+                        <version>1.4</version>
+                        <executions>
+                            <execution>
+                                <id>enforce</id>
+                                <configuration>
+                                    <rules>
+                                        <requireUpperBoundDeps>
+                                            <uniqueVersions>false</uniqueVersions>
+                                        </requireUpperBoundDeps>
+                                    </rules>
+                                </configuration>
+                                <goals>
+                                    <goal>enforce</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.18.1</version>
+                        <configuration>
+                            <skip>true</skip>
+                            <parallel>classes</parallel>
+                            <reuseForks>false</reuseForks>
+                            <forkCount>${test.threadcount}</forkCount>
+                            <threadCount>${test.threadcount}</threadCount>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=1024m</argLine>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>2.18</version>
+                        <configuration>
+                            <includes>
+                                <include>**/runCukes/junit/**/*.java</include>
+                                <include>**/runCukes/*.java</include>
+                                <include>**/*.java</include>
+                            </includes>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=1024m</argLine>
+                            <groups>net.thucydides.ebi.cucumber.tags.${test.tagnames}</groups>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>integration-test</goal>
+                                    <!--goal>verify</goal-->
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.6.1</version>
+                        <configuration>
+                            <source>1.8</source>
+                            <target>1.8</target>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>net.serenity-bdd.maven.plugins</groupId>
+                        <artifactId>serenity-maven-plugin</artifactId>
+                        <version>${serenity.maven.version}</version>
+                        <dependencies>
+                            <dependency>
+                                <groupId>net.serenity-bdd</groupId>
+                                <artifactId>serenity-core</artifactId>
+                                <version>${serenity.version}</version>
+                            </dependency>
+                        </dependencies>
+                        <executions>
+                            <execution>
+                                <id>serenity-reports</id>
+                                <phase>post-integration-test</phase>
+                                <goals>
+                                    <goal>aggregate</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
                     <plugin>
                         <groupId>org.jvnet.jax-ws-commons</groupId>
                         <artifactId>jaxws-maven-plugin</artifactId>
@@ -330,7 +421,7 @@
                             </execution>
                         </executions>
                     </plugin>
-                   </plugins>
+                </plugins>
             </build>
         </profile>
     </profiles>
